--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "amazon-cognito-identity-js": "^3.0.13",
+    "angular-font-awesome": "^3.1.2",
     "aws-sdk": "^2.494.0",
     "bootstrap": "^4.3.1",
+    "expired-storage": "^1.0.2",
+    "font-awesome": "^4.7.0",
+    "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
