--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
               "node_modules/font-awesome/scss/font-awesome.scss",
               "src/assets/dist/dropzone/dropzone.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/chart.js/dist/Chart.min.js"
+            ]
           },
           "configurations": {
             "production": {
