--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "angular-font-awesome": "^3.1.2",
     "aws-sdk": "^2.494.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "expired-storage": "^1.0.2",
     "font-awesome": "^4.7.0",
     "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
+    "ng2-charts": "^2.3.0",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
