added config for selfservice bool added identityPoolId to config added cognitoIdentityServiceProvider added currentUserIsAdmin value

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,9 +1,11 @@
 {
   "version": "0.dev",
   "cognito": {
+    "identityPoolId": "us-east-1:2927fbc1-6ab3-4031-864f-837081982622",
     "userPoolId": "us-east-1_fC9EAO1D0",
     "region": "us-east-1",
-    "clientId": "79eqaraqip1bh1pfi7hbnk6uc3"
+    "clientId": "79eqaraqip1bh1pfi7hbnk6uc3",
+    "allowUserSelfRegistration": false
   },
   "apigateway": {
     "url": "https://71upvkak4h.execute-api.us-east-1.amazonaws.com/prod/"
