--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
-    "amazon-cognito-identity-js": "^3.0.13",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
+    "amazon-cognito-identity-js": "^3.2.1",
     "angular-font-awesome": "^3.1.2",
-    "aws-sdk": "^2.494.0",
-    "bootstrap": "^4.3.1",
-    "chart.js": "^2.8.0",
+    "aws-sdk": "^2.596.0",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "expired-storage": "^1.0.2",
     "font-awesome": "^4.7.0",
     "hamburgers": "^1.1.3",
@@ -41,23 +41,24 @@
     "@angular/cli": "~8.0.2",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.10.51",
-    "codelyzer": "^5.0.0",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^8.10.59",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
   "resolutions": {
+    "caniuse-lite": "^1.0.30001017",
     "handlebars": "^4.3.0",
     "serialize-javascript": "^2.1.1"
   }
