--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "font-awesome": "^4.7.0",
     "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
+    "moment-timezone": "^0.5.27",
     "ng2-charts": "^2.3.0",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
