updating config.json to dev

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,13 +1,13 @@
 {
   "version": "0.dev",
   "cognito": {
-    "identityPoolId": "us-east-1:2927fbc1-6ab3-4031-864f-837081982622",
-    "userPoolId": "us-east-1_fC9EAO1D0",
+    "identityPoolId": "us-east-1:8c502636-9831-4dc9-8cab-55176e452732",
+    "userPoolId": "us-east-1_TQOLZjkfK",
     "region": "us-east-1",
-    "clientId": "79eqaraqip1bh1pfi7hbnk6uc3",
+    "clientId": "56ef66qpjlt38dnupudq79vh9b",
     "allowUserSelfRegistration": false
   },
   "apigateway": {
-    "url": "https://71upvkak4h.execute-api.us-east-1.amazonaws.com/prod/"
+    "url": "https://41hoxaavu3.execute-api.us-east-1.amazonaws.com/dev/"
   }
 }
