--- a/package.json
+++ b/package.json
@@ -21,31 +21,26 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "amazon-cognito-identity-js": "^3.2.4",
-    "angular-font-awesome": "^3.1.2",
     "aws-sdk": "^2.615.0",
-    "bootstrap": "^4.4.1",
-    "chart.js": "^2.9.3",
     "expired-storage": "^1.0.2",
-    "font-awesome": "^4.7.0",
-    "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
     "moment-timezone": "^0.5.27",
-    "popper": "^1.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^9.0.0",
     "@angular-devkit/build-angular": "~0.900.1",
-    "@angular/cli": "~9.0.1",
+    "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
     "@types/jasmine": "^3.5.3",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "@fullhuman/postcss-purgecss": "^2.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -53,7 +48,11 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-scss": "^2.0.0",
     "protractor": "^5.4.3",
+    "tailwindcss": "^1.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5"
