--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "amazon-cognito-identity-js": "^3.2.4",
     "aws-sdk": "^2.615.0",
     "expired-storage": "^1.0.2",
+    "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
     "moment-timezone": "^0.5.27",
     "rxjs": "~6.5.4",
