--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "src/assets/dist/dropzone/dropzone.scss"
+              "src/styles.scss"
             ],
             "scripts": [
             ]
@@ -98,9 +97,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/font-awesome/scss/font-awesome.scss",
-              "src/assets/dist/dropzone/dropzone.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           }
