--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aws-sdk": "^2.615.0",
     "expired-storage": "^1.0.2",
     "hamburgers": "^1.1.3",
+    "json-viewer-js": "^1.0.7",
     "moment-timezone": "^0.5.27",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
