--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formkiq-console",
-  "version": "0.dev",
+  "version": "1.2.0",
   "scripts": {
     "ng": "ng",
     "preinstall": "npx npm-force-resolutions",
@@ -8,7 +8,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "release-major": "release-it -- major --ci --dry-run",
+    "release-minor": "release-it -- minor --ci --dry-run",
+    "release-patch": "release-it -- patch --ci --dry-run"
   },
   "private": true,
   "dependencies": {
@@ -37,11 +40,11 @@
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
+    "@fullhuman/postcss-purgecss": "^2.1.0",
     "@types/jasmine": "^3.5.3",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "@fullhuman/postcss-purgecss": "^2.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -53,6 +56,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
     "protractor": "^5.4.3",
+    "release-it": "^14.2.2",
     "tailwindcss": "^1.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
