--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "amazon-cognito-identity-js": "^3.2.4",
     "aws-sdk": "^2.615.0",
     "expired-storage": "^1.0.2",
+    "file-saver": "^2.0.5",
     "hamburgers": "^1.1.3",
     "json-viewer-js": "^1.0.7",
     "moment-timezone": "^0.5.27",
@@ -66,8 +67,11 @@
     "caniuse-lite": "^1.0.30001017",
     "handlebars": "^4.3.0",
     "http-proxy": "^1.18.1",
+    "ini": "^1.3.6",
     "lodash": "^4.17.20",
+    "minimist": "^1.2.3",
     "npm-registry-fetch": "^9.0.0",
+    "object-path": "^0.11.5",
     "serialize-javascript": "^5.0.1",
     "yargs-parser": "^20.2.4"
   }
