--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0",
-    "@angular/common": "~9.0.0",
-    "@angular/compiler": "~9.0.0",
-    "@angular/core": "~9.0.0",
-    "@angular/forms": "~9.0.0",
-    "@angular/localize": "^9.0.0",
-    "@angular/platform-browser": "~9.0.0",
-    "@angular/platform-browser-dynamic": "~9.0.0",
-    "@angular/router": "~9.0.0",
+    "@angular/animations": "~13.3.4",
+    "@angular/common": "~13.3.4",
+    "@angular/compiler": "~13.3.4",
+    "@angular/core": "~13.3.4",
+    "@angular/forms": "~13.3.4",
+    "@angular/localize": "~13.3.4",
+    "@angular/platform-browser": "~~13.3.4",
+    "@angular/platform-browser-dynamic": "~13.3.4",
+    "@angular/router": "~13.3.4",
     "amazon-cognito-identity-js": "^3.2.4",
     "aws-sdk": "^2.615.0",
     "expired-storage": "^1.0.2",
@@ -31,37 +31,36 @@
     "hamburgers": "^1.1.3",
     "json-viewer-js": "^1.0.7",
     "moment-timezone": "^0.5.27",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^9.0.0",
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~9.0.7",
-    "@angular/compiler-cli": "~9.0.0",
-    "@angular/language-service": "~9.0.0",
+    "@angular-devkit/build-angular": "~13.3.4",
+    "@angular/cli": "~13.3.4",
+    "@angular/compiler-cli": "~13.3.4",
+    "@angular/language-service": "~13.4.4",
     "@fullhuman/postcss-purgecss": "^2.1.0",
-    "@types/jasmine": "^3.5.3",
-    "@types/jasminewd2": "^2.0.8",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.19",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
-    "protractor": "^5.4.3",
+    "protractor": "~7.0.0",
     "release-it": "^14.2.2",
-    "tailwindcss": "^1.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "tailwindcss": "^3.0.1",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.6.4"
   },
   "resolutions": {
     "caniuse-lite": "^1.0.30001017",
