--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,12 +1,11 @@
 {
-  "version":"v1.3.2",
-  "cognito": {
-    "userPoolId":"us-east-1_BVljd3gXw",
-    "region": "us-east-1",
-    "clientId":"1rf2di1i56h5bctec9td0jf5ja",
-    "allowUserSelfRegistration":false
+  "url": {
+    "authApi": "https://ee4oi2p95b.execute-api.us-east-2.amazonaws.com",
+    "chartApi": "",
+    "webSocketApi": "wss://3vqy2qwlgd.execute-api.us-east-2.amazonaws.com/prod",
+    "documentApi": "https://dv55u4399a.execute-api.us-east-2.amazonaws.com"
   },
-  "apigateway": {
-    "url": "https://1nq09s8f1l.execute-api.us-east-1.amazonaws.com"
-  }
+  "consoleversion": "v2.0.2",
+  "brand": "formkiq",
+  "allowAdminCreateUserOnly": "true"
 }
